--- a/_posts/2018-09-24-moving.md
+++ b/_posts/2018-09-24-moving.md
@@ -8,7 +8,7 @@ tags: [sample]
 
 date:   2018-09-24 18:57:37 +0300
 
-permalink: https://samarulmeu.github.io/mylagrange/the-thing/
+permalink: /the-thing/
 
 ---
 
