--- a/_posts/פוסט חדש.md
+++ b/_posts/פוסט חדש.md
@@ -1,3 +1,11 @@
+---
+layout: post
+title: "פוסט חדש עם מספרים 123"
+author: "דורון גוראל"
+categories: journal
+tags: [פוסט בעברית]
+image: cutting.jpg
+---
 # פוסט חדש
 מילים מילים מילים מילים
 - רשימה
