--- a/_posts/2021-06-13-haiku.md
+++ b/_posts/2021-06-13-haiku.md
@@ -4,7 +4,7 @@ title: "هايكو متعثرة"
 author: "نور"
 categories: journal
 tags: [documentation,sample]
-image: gardenshot.jpeg
+image:
 ---
 
 بسمتك المرتعشة حبيسة الدموع
