--- a/_posts/2021-08-03-accumpts.md
+++ b/_posts/2021-08-03-accumpts.md
@@ -8,7 +8,7 @@ tags: [documentation,sample]
 
 Let $ (x_n) $ be a sequence of reals. 
 
-$ p \in \mathbb{R} $ is an accumulation point of the sequence if for every $ \epsilon > 0 $, $ x_n $ lies in $ (p-\epsilon, p+\epsilon) $ for infinitely many $ n $ (stricten "infinitely many" to "all but finitely many", and we get definition of limit of a sequence). 
+$ p \in \mathbb{R} $ is an $\color{goldenrod}{\text{accumulation point}}$ of the sequence if for every $ \epsilon > 0 $, $ x_n $ lies in $ (p-\epsilon, p+\epsilon) $ for infinitely many $ n $ (stricten "infinitely many" to "all but finitely many", and we get definition of limit of a sequence). 
 
 A subsequence of $ (x_n) $ is just a sequence $ x_{n_1}, x_{n_2}, \ldots $ with $ n_1 &lt; n_2 &lt; \ldots $. 
 
