--- a/_posts/2021-08-07-Minkowski1.md
+++ b/_posts/2021-08-07-Minkowski1.md
@@ -24,9 +24,9 @@ Notice $ u,v$ have "size contraints" $ \sum_{i} (u_i)^{\frac{p}{k}} = 1 $ (i.e $
 Looking at the contraints $ \lVert u \rVert_{\frac{p}{k}} = \lVert v \rVert_{\frac{p}{p-k}} = 1 $, the crucial relation between $ \alpha := \frac{p}{k} $ and $ \beta := \frac{p}{p-k} $ is that $ \beta = \frac{1}{1 - \frac{1}{\alpha}} $, that is $ \frac{1}{\alpha} + \frac{1}{\beta} = 1 $.   
 So... we'll be done if we can establish the following lemma.
    
-$ \color{goldenrod}{\text{Lem}} $: Consider reals $\alpha, \beta &gt; 1 $ with $ \frac{1}{\alpha} + \frac{1}{\beta} = 1 $, and $ u,v \in \mathbb{R}^n $ with $ \lVert u \rVert_{\alpha} = \lVert v \rVert_{\beta} = 1 $ (i.e $\sum |u_i|^{\alpha} = \sum |v_i|^{\beta} = 1$).   
+$ \color{goldenrod}{\text{Lem}} $: Consider reals $\alpha, \beta &gt; 1 $ with $ \frac{1}{\alpha} + \frac{1}{\beta} = 1 $, and $ u,v \in \mathbb{R}^n $ with $ \lVert u \rVert_{\alpha} = \lVert v \rVert_{\beta} = 1 $ (i.e $\sum \vert u_i\vert^{\alpha} = \sum \vert v_i\vert^{\beta} = 1$).   
 Then $ |\langle u, v \rangle| \leq 1 $.   
-$\color{goldenrod}{\text{Pf}} $: $ |\langle u,v \rangle| = |\sum u_i v_i| $ $ \leq \sum |u_i| |v_i| $.   
-For indices where $ u_i, v_i $ are both nonzero, $ |u_i||v_i| = (|u_i|^{\alpha})^{\frac{1}{\alpha}} (|v_i|^{\beta})^{\frac{1}{\beta}} $ $ = e^{\frac{1}{\alpha}\log(|u_i|^{\alpha}) + \frac{1}{\beta} \log(|v_i|^{\beta})}$ $\leq e^{\log(\frac{1}{\alpha} |u_i|^{\alpha} + \frac{1}{\beta} |v_i|^{\beta})}$ $ = \frac{1}{\alpha} |u_i|^{\alpha} + \frac{1}{\beta} |v_i|^{\beta} $, that is $ |u_i| |v_i| \leq \frac{1}{\alpha} |u_i|^{\alpha} + \frac{1}{\beta} |v_i|^{\beta} $.   
-Even for indices where one of $u_i, v_i $ is $ 0$, we have $|u_i| |v_i| \leq \frac{1}{\alpha} |u_i|^{\alpha} + \frac{1}{\beta} |v_i|^{\beta} $.   
-So $ |\langle u, v \rangle| \leq \sum |u_i||v_i| $ $\leq \sum (\frac{1}{\alpha} |u_i|^{\alpha} + \frac{1}{\beta} |v_i|^{\beta}) = 1 $, as needed.
+$\color{goldenrod}{\text{Pf}} $: $ \vert \langle u,v \rangle\vert = \vert \sum u_i v_i \vert $ $ \leq \sum \vert u_i\vert \vert v_i \vert$.   
+For indices where $ u_i, v_i $ are both nonzero, $ \vert u_i\vert \vert v_i\vert = (\vert u_i\vert^{\alpha})^{\frac{1}{\alpha}} (\vert v_i\vert^{\beta})^{\frac{1}{\beta}} $ $ = e^{\frac{1}{\alpha}\log(|u_i|^{\alpha}) + \frac{1}{\beta} \log(\vert v_i\vert^{\beta})}$ $\leq e^{\log(\frac{1}{\alpha} \vert u_i\vert^{\alpha} + \frac{1}{\beta} \vert v_i\vert^{\beta})}$ $ = \frac{1}{\alpha} \vert u_i\vert ^{\alpha} + \frac{1}{\beta} \vert v_i\vert^{\beta} $, that is $ \vert u_i\vert \vert v_i\vert \leq \frac{1}{\alpha} \vert u_i\vert^{\alpha} + \frac{1}{\beta} \vert v_i\vert^{\beta} $.   
+Even for indices where one of $u_i, v_i $ is $ 0$, we have $\vert u_i\vert \vert v_i\vert \leq \frac{1}{\alpha} \vert u_i\vert^{\alpha} + \frac{1}{\beta} \vert v_i\vert^{\beta} $.   
+So $ \vert \langle u, v \rangle\vert \leq \sum \vert u_i\vert \vert v_i\vert $ $\leq \sum (\frac{1}{\alpha} \vert u_i\vert^{\alpha} + \frac{1}{\beta} \vert v_i\vert^{\beta}) = 1 $, as needed.
