Edits to blog title and drafting some entries

--- a/_posts/2021-06-13-haiku.md
+++ b/_posts/2021-06-13-haiku.md
@@ -28,4 +28,6 @@ image:
 في لون السماء، في عطر الزهور ، في سكينة الليل ..سكنك
 
 
+- محاولة للترجمة
+
 <iframe src="https://open.spotify.com/embed?uri=spotify%3Atrack%3A5AVUsyKKPhYJItIVeEqw2E" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
