Minor edits to some posts

--- a/_posts/2021-06-13-haiku.md
+++ b/_posts/2021-06-13-haiku.md
@@ -1,11 +1,13 @@
 ---
 layout: post
 title: "هايكو متعثرة"
-author: "نور"
+author: "Noor"
 categories: journal
 tags: [documentation,sample]
 image:
 ---
+
+<h3>محاولة للترجمة</h3>
 
 بسمتك المرتعشة حبيسة الدموع
 
@@ -28,6 +30,5 @@ image:
 في لون السماء، في عطر الزهور ، في سكينة الليل ..سكنك
 
 
-- محاولة للترجمة
 
 <iframe src="https://open.spotify.com/embed?uri=spotify%3Atrack%3A5AVUsyKKPhYJItIVeEqw2E" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
