Fix moments terminology

--- a/_posts/2022-10-31-Stat.md
+++ b/_posts/2022-10-31-Stat.md
@@ -66,7 +66,7 @@ We can assume discrete ${ E }$ for now. For any ${ \theta \in \Theta }$ a separa
 Let ${ (E, (\mathbb{P} _{\theta}) _{\theta \in \Theta})  }$ be a statistical model based on sample ${ X _1, \ldots, X _n },$ with true parameter ${ \theta ^{\ast} }.$ Likelihood of the model is defined as: If ${ E }$ is discrete, it is the map ${ L _n : E ^n \times \Theta \to \mathbb{R} }$ sending ${ (x _1, \ldots, x _n; \theta) \mapsto \prod _{1} ^{n} p _{\theta} (x _i) }.$ If ${ E }$ is continuous, it is the map ${ L _n : E ^n \times \Theta \to \mathbb{R} }$ sending ${ (x _1, \ldots, x _n; \theta) \mapsto \prod _{1} ^{n} f _{\theta} (x _i) }.$   
 The maximum likelihood estimator of ${ \theta }$ is ${ \hat{\theta} ^{\text{MLE}} _{n} = \text{argmax} _{\theta \in \Theta} L _n(X _1, \ldots, X _n ; \theta) .}$ (One maximises log-likelihood ${ \log L _n (X _1, \ldots, X _n ; \theta) }$ in practice). Turns out when ${ \Theta \subseteq \mathbb{R} }$ and mild regularity conditions hold, we have consistency ${ \hat{\theta} ^{\text{MLE}} _n \overset{(p)}{\to} \theta ^{\ast}, }$ and asymptotic normality ${ \sqrt{n} (\hat{\theta} ^{\text{MLE}} _n - \theta ^{\ast}) \overset{(d)}{\to} N(0, \mathcal{I}(\theta ^{\ast} ) ^{-1} ) }$ where Fischer Information ${ \mathcal{I}(\theta) := \text{var}[\ell ' (\theta)] = -\mathbb{E}[\ell '' (\theta)] }$ and random variable ${ \ell(\theta) }$ is given by ${ \ell(\theta) := \log L _1 (X _1; \theta) }.$ 
 
-Let ${ (E, (\mathbb{P} _{\theta}) _{\theta \in \Theta} ) , \Theta \subseteq \mathbb{R} ^d }$ be a statistical model based on sample ${ X _1, \ldots, X _n },$ with true parameter ${ \theta ^{\ast} }.$ Now for ${ 1 \leq k \leq d }$ one has empirical moments ${ m _k (\theta) = \mathbb{E} _{\theta} [X _{1} ^{k}] }$ and sample moments ${ \hat{m} _k = \frac{1}{n} \sum _{i=1} ^{n} X _i ^k  }.$ From LLN, ${ (\hat{m} _1 \ldots, \hat{m} _d) \overset{a.s}{\to} (m _1 (\theta ^{\ast}), \ldots , m _d (\theta ^{\ast}) ) }$ as ${ n \to \infty }.$   
+Let ${ (E, (\mathbb{P} _{\theta}) _{\theta \in \Theta} ) , \Theta \subseteq \mathbb{R} ^d }$ be a statistical model based on sample ${ X _1, \ldots, X _n },$ with true parameter ${ \theta ^{\ast} }.$ Now for ${ 1 \leq k \leq d }$ one has population moments ${ m _k (\theta) = \mathbb{E} _{\theta} [X _{1} ^{k}] }$ and sample moments ${ \hat{m} _k = \frac{1}{n} \sum _{i=1} ^{n} X _i ^k  }.$ From LLN, ${ (\hat{m} _1 \ldots, \hat{m} _d) \overset{a.s}{\to} (m _1 (\theta ^{\ast}), \ldots , m _d (\theta ^{\ast}) ) }$ as ${ n \to \infty }.$   
 Suppose the moment map ${ M : \Theta \to \mathbb{R} ^d }$ sending ${ \theta \mapsto (m _1 (\theta), \ldots, m _d (\theta)) }$ is injective. So true parameter is ${ \theta ^{\ast} = M ^{-1} (m _1 (\theta ^{\ast}), \ldots , m _d (\theta ^{\ast}) ), }$ and LLN above suggests this can be estimated by ${ \hat{\theta} ^{\text{MM}} _n := M ^{-1} (\hat{m} _1, \ldots, \hat{m} _d) }$ provided it exists.   
 ( ${ \hat{\theta} ^{\text{MM}} _n }$ is called the moments estimator for ${ \theta }$ ). 
 
